@@ -195,12 +195,15 @@ ELSE
   ; block instead of the ones above
   ; ;ReadMap READMAPS.866
   ; ;WriteMap WRITMAPS.866
+  ; ;The following line takes care of 0x8D (big en):
+  ; SoftCrXlat 72
   ; OutputCharset CP866
   ; CharsetAlias IBMPC CP866
 
   ; If you are using Codepage 1125 (Ukraine, Belorussia), use the following:
   ; ;ReadMap READMAPS.UKR
   ; ;WriteMap WRITMAPS.UKR
+  ; SoftCrXlat 72
   ; OutputCharset CP1125
   ; ; or for compatibility with Russia: OutputCharset CP866
   ; CharsetAlias IBMPC CP866
